--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/IT-Docs/" # the subpath of your site, e.g. /blog
+baseurl: "/IT-Docs" # the subpath of your site, e.g. /blog
 url: "https://jobjcl.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
@@ -48,10 +48,10 @@ minima:
 collections:
   assignments:
     output: true  
-    permalink: /assignments/:name/
+    permalink: "/assignments/:name/"
   documents:
     output: true
-    permalink: /documents/:name/
+    permalink: "/documents/:name/"
 
 
 # Exclude from processing.
